# EdenLib

./: .gitignore  CMakeLists.txt  README.md  a.out  arena.hpp  assume_assert.hpp  bitset.hpp  concepts.hpp  eden_all.hpp  enum_utils.hpp  lifetime_observer.hpp  macros.hpp  memory.hpp  metaprogramming.hpp  null_conditional_chaining.hpp  owned.hpp  releasing_vector.hpp  stack_vector.hpp  string_utils.hpp  swap_vector.hpp  tests.cpp  type_flags.hpp  typedefs.hpp  vector16.hpp
metaprogramming/: concepts.hpp  packs.hpp  type_class.hpp
vectors/: README.md  base_vector.hpp  basic_vector_donotuse.hpp  contiguous_soa.hpp  releasing_vector.hpp  soa_and_multivec.hpp  swap_vector.hpp  vector.hpp  vector16.hpp
